k8s/event-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: event-api
  ports:
    - port: 8081
      targetPort: 8081
