k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "180" #seconds
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "300" #seconds
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) #this means any request url needs to forworded to the below cluster ip
            backend:
              serviceName: worker-api-cluster-ip-service
              servicePort: 8086        
#          - path: /event/api/?(.*)
#            backend:
#              serviceName: event-api-cluster-ip-service
#              servicePort: 8081
#          - path: /?(.*)
#            backend:
#              serviceName: adminer-cluster-ip-service
#              servicePort: 8083
#          - path: /rabbit/?(.*)
#            backend:
#              serviceName: rabbit-mq-admin-cluster-ip-service
#              servicePort: 15672
